# Morphanimals

./: .gitignore  README.md  README.txt  demo.py  evo_island_main.py  game.py  mountaincar.py  pyrightconfig.json
.claude/: settings.local.json
Evo Island/: CMakeLists.txt  PLAN_HDF5_REFACTOR.md  agent.py  config.json  config.py  environment.py  evo_island.py  evo_island_main.py  experiment.py  pyproject.toml  requirements.txt
Evo Island/cpp/: agent.cpp  agent.h  evo_core.cpp  simulation_core.cpp  simulation_core.h
Evo Island/notebooks/: aggregate_analysis.ipynb  trial_analysis.ipynb
Evo Island/py/: agent.py  environment.py  experiment.py  genes.py  metrics.py  notebooks.py  output.py  simulation.py  speciation.py  visualization.py  visualize.py
