[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "evo_core"
version = "0.1.0"
requires-python = ">=3.12"

[tool.scikit-build]
cmake.build-type = "Release"
# Place the built .pyd directly in the package directory so
# `from evo_core import Simulation` works without install.
wheel.packages = []
build-dir = "build"
